--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@
 				<div class="row align-items-center">
 					<div class="col-lg-3">
 						<div class="header-left-content">
-							<p>Welcome to Albepay</p>
+							<p>Welcome to Albega payments</p>
 						</div>
 					</div>
 					<div class="col-lg-9">
