--- a/index.html
+++ b/index.html
@@ -905,7 +905,7 @@
 								<li>
 									<a href="tel:+919786777365">
 										<i class="fa fa-phone"></i>
-										9786777365
+										+91 9786777365
 									</a>
 								</li>
 								<li>
@@ -2038,7 +2038,7 @@
 							<li><i class="far fa-envelope"></i> Email: <a
 									href="mailto:albegapayments@gmail.com">albegapayments@gmail.com</a></li>
 							<li><i class="fas"><img src="images/phone-call.png" alt=""></i> Phone: <a
-									href="tel:+919786777365">9786777365</a></li>
+									href="tel:+919786777365">+91 9786777365</a></li>
 
 						</ul>
 					</div>
